# RaytracingHomework

./: CMakeLists.txt  README.md
RayTracingCmake/: CMakeLists.txt  main.cpp
RayTracingCmake/hittable/: boxHittable.h  hittable.h  hittableList.h  instance.h  meshHittable.h  sphereHittable.h  xyRectHittable.h  yzRectHittable.h  zxRectHittable.h
RayTracingCmake/light/: pointLightSource.h
RayTracingCmake/material/: material.h  materialLambertianColored.h  materialMetalic.h  materialPureFrenel.h  materialSimpleRefractor.h
RayTracingCmake/mesh/: mesh.h  sceneLoader.h
RayTracingCmake/utils/: aabb.cpp  aabb.h  color.h  hitInfo.h  linal.h  logging.h  matrix.h  myMath.cpp  myMath.h  ray.h  stb_image_write.h  vec.h
